2007-09-17  Glenn Morris  <rgm@gnu.org>

	* textmodes/tex-mode.el (tex-compilation-parse-errors): Prefer the
	filename from `--file-line-error', if it is available.

2007-09-17  Joe Wells  <jbw@macs.hw.ac.uk>  (tiny change)

	* textmodes/tex-mode.el (tex-compilation-parse-errors): Also match
	TeX `--file-line-error' format.

2007-09-17  Glenn Morris  <rgm@gnu.org>

	* textmodes/tex-mode.el (tex-region): Simplify previous change,
	handling the case where the region is not in `tex-main-file'.
	(tex-region-1): Delete.
	(tex-region-header): New function, doing the header part of the
	old tex-region-1.

2007-09-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* ediff-init.el (ediff-verbose-p): This var is not a constant.

2007-09-16  Drew Adams  <drew.adams@oracle.com>

	* cus-edit (custom-face-edit-activate): Doc fix.

2007-09-16  Glenn Morris  <rgm@gnu.org>

	* textmodes/tex-mode.el (tex-region): Handle the case where the
	region is not in `tex-main-file'.  Move the old code that applies
	to both cases...
	(tex-region-1): ...to this new function.

2007-09-15  Martin Rudalics  <rudalics@gmx.at>

	* simple.el (blink-matching-open): Don't display message when no
	paren is found within blink-matching-paren-distance characters.
	Don't search prompt in blink-matching-paren-distance nil case.

2007-09-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* term/xterm.el (terminal-init-xterm): Add C-M- bindings.

2007-09-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-mtn.el: New file.

	* vc-hooks.el (vc-handled-backends): Add Mtn.

2007-09-13  Eli Zaretskii  <eliz@gnu.org>

	* files.el (find-file, find-file-other-window)
	(find-file-other-frame, find-file-existing, find-file-read-only)
	(find-file-read-only-other-window)
	(find-file-read-only-other-frame)
	(find-alternate-file-other-window, find-alternate-file): Doc fixes.

2007-09-13  Jari Aalto  <jari.aalto@cante.net>

	* man.el (Man-default-man-entry): At end of line, continue looking