@@ -1,3 +1,8 @@
+2007-09-17  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc-git.el (vc-git-log-view-mode): Add font-lock patterns for
+	Signed-off-by, Acked-by and Merge.
+
 2007-09-17  Glenn Morris  <rgm@gnu.org>
 
 	* textmodes/tex-mode.el (tex-compilation-parse-errors): Prefer the
